feat: support 1.16.5 (except forge)